--- a/css/_mc-images.scss
+++ b/css/_mc-images.scss
@@ -2,11 +2,9 @@
     position: relative;
     max-width: 100%;
     overflow: hidden;
-    @media screen and (max-width: $tablet - 1) {
-        @each $size in $slist {
-            &.img-mah\:#{$size}{
-                max-height: #{$size}px;
-            }
+    @each $size in $slist {
+        &.img-mah\:#{$size}{
+            max-height: #{$size}px;
         }
     }
     &.mb{
